5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1834_1273.log
== TEST (2019-06-25 16:44:44) 
-- CODE:
from numpy import*
from nump.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
#matriz linha
valores=array([50,-129,350,870])
#matriz coluna
valores=valores.t
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
File "XXXX", line 4
    coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:45:54) 
-- CODE:
from numpy import*
from nump.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.t
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
File "XXXX", line 4
    coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:45:55) 
-- CODE:
from numpy import*
from nump.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.t
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
File "XXXX", line 4
    coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:46:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.t
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
File "XXXX", line 4
    coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:47:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.T
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
File "XXXX", line 4
    coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0].[1,0,0,1]])
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:48:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.T
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:48:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.T
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- EXECUTION TIME:
1.0332
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:00:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
#matriz do sistema linear
coeficientes=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
#matriz linha
valores=array([50,-120,350,870])
#matriz coluna
valores=valores.T
#resolucao do sistema de equacoes ineares
solucao=solve(coeficientes,valores)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
